--- a/biodata.html
+++ b/biodata.html
@@ -6,9 +6,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Biodata</title>
     <link rel="icon" type="image/x-icon" href="images/IconChatime.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="font-sans min-h-lvh">
     <header class="relative z-50">
+
         <nav class="container flex lg:flex-row justify-around py-2.5 text-center items-center bg-purple-800 w-full min-w-full fixed">
             <a class="block lg:hidden" onclick=showSidebar() href="#"><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a>
             <a class="size-1/2 lg:size-auto" href="#"><img src="images/logo-chatime.png" alt="LogoChatime"></a>
@@ -58,6 +60,7 @@
             <img class="mt-8 md:max-w-80 md:h-auto md:rounded-2xl md:mt-32 md:mr-48" src="images/fotokuPt2.jpg" alt="Foto Grafiel">
         </div><br><br>
     </div>
+
     <footer class="flex flex-col">
         <div class="flex flex-col lg:flex-row bg-pink-400 justify-start items-center bg-no-repeat bg-cover w-full min-w-full y-auto lg:py-32 lg:pr-8px" style="background-image: url(images/footerImage.png)">
             <div class="flex flex-col items-center lg:items-baseline text-white lg:pr-60 pb-6 lg:pb-0 lg:pl-40">
@@ -82,6 +85,7 @@
             </ul>
         </div>
     </footer>
+
     <script>
         function showSidebar(){
             const sidebar = document.querySelector('#sidebar')
@@ -91,23 +95,6 @@
             const sidebar = document.querySelector('#sidebar')
             sidebar.style.display = 'none'
         }
-        let slideIndex = 0;
-            const slideContainer = document.getElementById('carousel-slide');
-            const slides = slideContainer.getElementsByTagName('a');
-            const totalSlides = slides.length;
-            let slideInterval;
-
-        function nextSlide() {
-            slideIndex = (slideIndex + 1) % totalSlides;
-            slideContainer.style.transform = `translateX(-${slideIndex * 100}vw)`;
-            resetAutoSlide();
-        }
-
-        function prevSlide() {
-            slideIndex = (slideIndex - 1 + totalSlides) % totalSlides;
-            slideContainer.style.transform = `translateX(-${slideIndex * 100}vw)`;
-            resetAutoSlide();
-            }
     </script>
 </body>
 </html>
