--- a/contact_us.html
+++ b/contact_us.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Contact Us</title>
     <link rel="icon" type="image/x-icon" href="images/IconChatime.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100 min-h-screen py-12 px-4 sm:px-6 lg:px-8">
     <header class="relative z-50">
@@ -34,35 +34,36 @@
             <li class="py-2 bg-pink-500 w-full text-white text-center "><a href=#>MOBILE APP</a></li>
         </ul>
     </header>
-    <div class="max-w-2xl mx-auto bg-white p-8 rounded-lg shadow-md">
+    
+    <div class="max-w-2xl mx-auto bg-white p-8 rounded-lg shadow-md mt-20">
         <h1 class="text-3xl font-bold text-purple-800 mb-8 text-center">Student Registration Form</h1>
         <form id="registrationForm" class="space-y-6">
             <!-- Full Name -->
             <div>
                 <label for="fullName" class="block text-sm font-medium text-gray-700">Full Name</label>
                 <input type="text" id="fullName" name="fullName" 
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500">
             </div>
 
             <!-- Student ID -->
             <div>
                 <label for="studentId" class="block text-sm font-medium text-gray-700">Student ID (NIM)</label>
                 <input type="text" id="studentId" name="studentId" 
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500">
             </div>
 
             <!-- Email -->
             <div>
                 <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
                 <input type="email" id="email" name="email" 
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500">
             </div>
 
             <!-- Faculty/Major -->
             <div>
                 <label for="faculty" class="block text-sm font-medium text-gray-700">Faculty/Major</label>
                 <select id="faculty" name="faculty" 
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500">
                     <option value="">Select Faculty/Major</option>
                     <option value="computer-science">Computer Science</option>
                     <option value="engineering">Engineering</option>
@@ -76,7 +77,7 @@
             <div>
                 <label for="dob" class="block text-sm font-medium text-gray-700">Date of Birth</label>
                 <input type="date" id="dob" name="dob" 
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500">
             </div>
 
             <!-- Gender -->
@@ -84,11 +85,11 @@
                 <label class="block text-sm font-medium text-gray-700">Gender</label>
                 <div class="mt-2 space-x-6">
                     <label class="inline-flex items-center">
-                        <input type="radio" name="gender" value="male" class="form-radio text-blue-600">
+                        <input type="radio" name="gender" value="male" class="form-radio text-pink-600">
                         <span class="ml-2">Male</span>
                     </label>
                     <label class="inline-flex items-center">
-                        <input type="radio" name="gender" value="female" class="form-radio text-blue-600">
+                        <input type="radio" name="gender" value="female" class="form-radio text-pink-600">
                         <span class="ml-2">Female</span>
                     </label>
                 </div>
@@ -98,25 +99,50 @@
             <div>
                 <label for="address" class="block text-sm font-medium text-gray-700">Address</label>
                 <textarea id="address" name="address" rows="3" 
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500"></textarea>
+                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500"></textarea>
             </div>
 
             <!-- Phone Number -->
             <div>
                 <label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
                 <input type="tel" id="phone" name="phone" 
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500">
             </div>
 
             <!-- Submit Button -->
             <div class="pt-4">
                 <button type="submit" 
-                    class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                    class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-800 hover:bg-pink-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                     Register
                 </button>
             </div>
         </form>
     </div>
+
+    <footer class="flex flex-col w-screen mt-20">
+        <div class="flex flex-col lg:flex-row bg-pink-400 justify-start items-center bg-no-repeat bg-cover w-full min-w-full y-auto lg:py-32 lg:pr-8px" style="background-image: url(images/footerImage.png)">
+            <div class="flex flex-col items-center lg:items-baseline text-white lg:pr-60 pb-6 lg:pb-0 lg:pl-40">
+                <p class="text-2xl lg:text-4xl font-bold">Get in touch with us</p>
+                <p class="text-sm lg:text-lg font-bold">Subscribe for updated promo, news and events</p>
+            </div>
+            <form class="flex items-center">
+                <i class="fas fa-envelope text-purple-800 bg bg-white py-1 px-2 lg:text-2xl lg:py-1 lg:px-6"></i>
+                <input class="lg:text-xl lg:py-1.5 lg:px-2" type="email" placeholder="Your Email">
+                <button class="lg:text-xl lg:py-1.5 lg:px-4 text-white bg-green-500 text" type="submit">Subscribe</button>
+            </form>
+        </div>
+        <div class="flex flex-col-reverse lg:flex-row justify-between items-center text-purple-800 pt-4 lg:pt-2 lg:pb-6">
+            <ul class="flex flex-row space-x-2.5 lg:pl-7 font-bold text-2xl">
+                <li class="hover:text-pink-500"><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li class="hover:text-pink-500"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li class="hover:text-pink-500"><a href="#"><i class="fab fa-instagram"></i></a></li>   
+            </ul>
+            <ul class="flex flex-col lg:flex-row items-center lg:space-x-4 font-bold lg:pr-7">
+                <li class="hover:text-pink-500"><a href="https://fti.unai.edu/" target="_blank">FTI UNAI</a></li>
+                <li class="hover:text-pink-500"><a href="https://unai.edu/" target="_blank">UNAI Website</a></li>
+            </ul>
+        </div>
+    </footer>
 
     <script>
         function showSidebar(){
@@ -127,23 +153,6 @@
             const sidebar = document.querySelector('#sidebar')
             sidebar.style.display = 'none'
         }
-        let slideIndex = 0;
-            const slideContainer = document.getElementById('carousel-slide');
-            const slides = slideContainer.getElementsByTagName('a');
-            const totalSlides = slides.length;
-            let slideInterval;
-
-        function nextSlide() {
-            slideIndex = (slideIndex + 1) % totalSlides;
-            slideContainer.style.transform = `translateX(-${slideIndex * 100}vw)`;
-            resetAutoSlide();
-        }
-
-        function prevSlide() {
-            slideIndex = (slideIndex - 1 + totalSlides) % totalSlides;
-            slideContainer.style.transform = `translateX(-${slideIndex * 100}vw)`;
-            resetAutoSlide();
-            }
 
         document.getElementById('registrationForm').addEventListener('submit', function(e) {
             e.preventDefault();
